syntax error: removing braces

--- a/clusters/oci-prod/app-signconnect-prod.yaml
+++ b/clusters/oci-prod/app-signconnect-prod.yaml
@@ -15,6 +15,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: signconnect
-  syncPolicy: {}
+  syncPolicy:
     syncOptions:
       - CreateNamespace=true
