--- a/clusters/oci-prod/app.yaml
+++ b/clusters/oci-prod/app.yaml
@@ -12,6 +12,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: paulojauregui-com
-  syncPolicy: {}
+  syncPolicy:
     syncOptions:
       - CreateNamespace=true
