updated ingress-nginx-dev to account for new dev cluster being arm

--- a/clusters/home-dev/infra.yaml
+++ b/clusters/home-dev/infra.yaml
@@ -24,7 +24,7 @@ spec:
             controller:
               replicaCount: 1
               nodeSelector:
-                kubernetes.io/arch: "amd64"
+                kubernetes.io/arch: "arm64"
               service:
                 type: NodePort
   template:
