--- a/clusters/home-dev/infra.yaml
+++ b/clusters/home-dev/infra.yaml
@@ -26,7 +26,7 @@ spec:
               nodeSelector:
                 kubernetes.io/arch: "arm64"
               service:
-                type: NodePort
+                type: LoadBalancer
   template:
     metadata:
       name: '{{name}}'
