--- a/clusters/home-dev/infrastructure-apps.yaml
+++ b/clusters/home-dev/infrastructure-apps.yaml
@@ -10,7 +10,7 @@ spec:
   - list:
       elements:
       - name: sealed-secrets
-        repoURL: https://sealed-secrets.github.io/sealed-secrets
+        repoURL: https://bitnami-labs.github.io/sealed-secrets
         chart: sealed-secrets
         version: "2.17.4"
         namespace: kube-system
