--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ root-app-dev.yaml
 root-app-prod.yaml
 test-app.yaml
 root-app-staging.yaml
+
+# Ignore the directory for temporary unencrypted secrets
+/.secrets/
