feat(deploy): Initial Kubernetes deployment configuration for SignConnect
This commit introduces all the necessary Kubernetes manifests and Kustomize
configurations to deploy the SignConnect application to the development
cluster via the GitOps workflow.

This completes the initial migration from a Docker Compose setup to a
Kubernetes-native deployment.

Key changes include:
- Created separate, component-specific Deployment and Service manifests
  for the backend and frontend.
- Added a CloudNativePG Cluster manifest to provision the PostgreSQL
  database.
- Implemented a secure secret management workflow by creating a
  SealedSecret for backend API keys and the Firebase service account.
- Configured the backend Deployment to consume database credentials from the
  CNPG-managed secret and application secrets from the SealedSecret.
- Added public Firebase configuration as environment variables to the
  frontend Deployment.
- Defined an Ingress resource in the development overlay to route traffic
  to the frontend and backend services.
- Updated all base and overlay kustomization.yaml files to include the
  new resources and orchestrate the deployment.

--- a/apps/base/signconnect/01-backend-deployment.yaml
+++ b/apps/base/signconnect/01-backend-deployment.yaml
@@ -1,12 +1,12 @@
 # apps/base/signconnect/01-backend-deployment.yaml
-# This is an updated version of your existing file.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-deployment
-  namespace: signconnect
+  name: signconnect-backend
+  labels:
+    app: signconnect-backend
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: signconnect-backend
@@ -16,12 +16,59 @@ spec:
         app: signconnect-backend
     spec:
       containers:
-      - name: backend
-        image: ghcr.io/howdiggy/signconnect-backend:latest
-        ports:
-        - containerPort: 8000
-        # This new 'envFrom' block tells the container to load all key-value
-        # pairs from the 'backend-secret' as environment variables.
-        envFrom:
-        - secretRef:
-            name: backend-secret
+        - name: backend
+          # Use the image you just pushed
+          image: ghcr.io/howdiggy/signconnect-backend:latest
+          imagePullPolicy: Always # Ensures the latest image is always pulled
+          ports:
+            - containerPort: 8000
+          # Liveness and Readiness probes are crucial for reliability
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          env:
+            # Map keys from the CNPG secret to the variable names your app expects
+            - name: POSTGRES_SERVER
+              valueFrom:
+                secretKeyRef:
+                  name: signconnect-db-credentials
+                  key: host
+            - name: POSTGRES_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: signconnect-db-credentials
+                  key: port
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: signconnect-db-credentials
+                  key: user
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: signconnect-db-credentials
+                  key: dbname
+          envFrom:
+            # This loads the database connection details from the secret
+            # that CloudNativePG automatically creates for your cluster.
+            - secretRef:
+                name: signconnect-db-credentials
+            # This will load your application-specific secrets
+            - secretRef:
+                name: signconnect-backend-secret
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
