--- a/apps/overlays/development/signconnect/kustomization.yaml
+++ b/apps/overlays/development/signconnect/kustomization.yaml
@@ -2,16 +2,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# 1. Include the base resources AND the new ingress resource
+# Inherit all the base resources
 resources:
   - ../../../base/signconnect
-  - ingress.yaml
+  - ingress.yaml # Include the new ingress
 
-# 2. Enforce a namespace on all resources
+# Apply a namespace to all resources
 namespace: signconnect
 
-# 3. Apply patches to modify the base resources
+# Optional: Apply patches for dev-specific settings if needed
 patches:
   - path: replica-count.yaml
-  - patch: postgres-patch.yaml
-  
