updated development overlay for signconnect

--- a/apps/overlays/development/signconnect/kustomization.yaml
+++ b/apps/overlays/development/signconnect/kustomization.yaml
@@ -13,3 +13,4 @@ namespace: signconnect
 # Optional: Apply patches for dev-specific settings if needed
 patches:
   - path: replica-count.yaml
+  - path: postgres-patch.yaml
