including envFrom.secretRef in backend-deployment

--- a/apps/base/signconnect/01-backend-deployment.yaml
+++ b/apps/base/signconnect/01-backend-deployment.yaml
@@ -67,6 +67,8 @@ spec:
             # This loads the rest of your secrets (API keys, etc.)
             - secretRef:
                 name: signconnect-backend-secret
+            - secretRef:
+                name: signconnect-db-app
           
           resources:
             requests:
