--- a/apps/base/signconnect/01-backend-deployment.yaml
+++ b/apps/base/signconnect/01-backend-deployment.yaml
@@ -35,6 +35,8 @@ spec:
             periodSeconds: 10
           # This 'env' block now only contains non-secret values
           env:
+            - name: PYTHONPATH
+              value: "/app/src"
             - name: SENTRY_ENVIRONMENT
               value: "development"
           # This 'envFrom' block loads all secrets correctly
