--- a/apps/base/signconnect/01-backend-deployment.yaml
+++ b/apps/base/signconnect/01-backend-deployment.yaml
@@ -15,6 +15,19 @@ spec:
       labels:
         app: signconnect-backend
     spec:
+      initContainers:
+        - name: check-db-secret
+          image: busybox:1.36 # A tiny, minimal image
+          # This command checks for the secret every 2 seconds until it exists
+          command:
+            - sh
+            - -c
+            - |
+              until nslookup signconnect-db-rw.signconnect.svc.cluster.local; do
+                echo "Waiting for PostgreSQL service...";
+                sleep 2;
+              done;
+              echo "PostgreSQL service is up.";
       containers:
         - name: backend
           image: ghcr.io/howdiggy/signconnect-backend:latest
