dev: point signconnect-db-app secret to Neon (sealed)

--- a/apps/overlays/development/signconnect/kustomization.yaml
+++ b/apps/overlays/development/signconnect/kustomization.yaml
@@ -6,6 +6,7 @@ kind: Kustomization
 resources:
   - ../../../base/signconnect
   - ingress.yaml # Include the new ingress
+  - signconnect-db-app.sealedsecret.yaml
 
 # Apply a namespace to all resources
 namespace: signconnect
