dev: point signconnect app to neon-dev-cutover branch

--- a/clusters/home-dev/app-signconnect-dev.yaml
+++ b/clusters/home-dev/app-signconnect-dev.yaml
@@ -8,7 +8,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/HowDiggy/k8s-gitops.git
-    targetRevision: neon-dev-clutover
+    targetRevision: neon-dev-cutover
     path: apps/overlays/development/signconnect
   destination:
     server: https://kubernetes.default.svc
