--- a/infrastructure/overlays/production/kustomization.yaml
+++ b/infrastructure/overlays/production/kustomization.yaml
@@ -2,10 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Include the base ingress-nginx application
+  # Include the base applications
   - ../../base/ingress-nginx
+  - ../../base/cert-manager
+  - ../../base/argocd
+
 patches:
-  # Apply the production-specific patch
+  # Apply the production-specific patch for ingress-nginx
   - path: ingress-nginx-patch.yaml
     target:
       kind: Application
