updated namespace for couldflare-api-secret from default to cert-manager

--- a/infrastructure/base/cert-manager/sealed-cloudflare-token.yaml
+++ b/infrastructure/base/cert-manager/sealed-cloudflare-token.yaml
@@ -10,7 +10,7 @@
     "template": {
       "metadata": {
         "name": "cloudflare-api-token-secret",
-        "namespace": "default",
+        "namespace": "cert-manager",
         "creationTimestamp": null
       }
     },
