--- a/clusters/oci-prod/infrastructure-apps.yaml
+++ b/clusters/oci-prod/infrastructure-apps.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: 2.17.4
   destination:
     server: https://kubernetes.default.svc
-    namespace: kube-system
+    namespace: cert-manager
   syncPolicy:
     automated:
       prune: true
